Fix misaligned cross arrow

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -47,6 +47,7 @@
 .modal-button-bar {
   display: block;
   background-color: white;
+  border: 1px solid rgb(187, 187, 187);
   position: relative;
   width: 100%;
   height: 5px;
@@ -58,7 +59,7 @@
 }
 
 .modal-button-bar:nth-of-type(2) {
-  top: 5px;
+  top:3px;
   transform: rotate(135deg);
 }
 
